# mlx

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  OWNERS  README.md  modelmesh-role.yaml  modelmesh-rolebinding.yaml  pyproject.toml  temp_run.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  mlx-ci.yml  publish-pypi.yml  verify-links.yml
api/: README.md  add_license_headers.sh  codegen.sh  deploy.sh  generate_code.sh  requirements.txt
api/client/: .swagger-codegen-ignore  .travis.yml  README.md  git_push.sh  requirements.txt  setup.py
api/examples/: catalog_api.py  components_api.py  credentials_api.py  (+6 more)
bootstrapper/: Dockerfile  README.md  bootstrap.yaml  catalog_upload.json  configmap.yaml  docker-compose.yaml  init_catalog.sh  init_db.sql  start.py
components/: README.md  template.yaml
datasets/: README.md
docs/: README.md  import-assets.md  install-mlx-on-kind.md  install-mlx-on-kubeflow.md  mlx-install-operator.md  mlx-install-with-kubeflow.md  mlx-install.md  mlx-models-workshop.md  mlx-read-only-deployment.md  mlx-setup.md  mlx-workshop.md  troubleshooting.md  usage-steps.md  usage_steps.md
hack/: add_headers.sh  add_license_headers.sh  olm-console.yaml  regenerate_catalog_upload_json.py
mlx/: cos_backend.py
models/: README.md  template.yaml
notebooks/: README.md  template.yaml
pipelines/: README.md
quickstart/: Dockerfile  KIND.md  README.md  catalog_upload.json  clean_and_pull.sh  docker-compose.yaml  init_catalog.sh  init_db.sql
schema/: model.json  notebook.json
(+591 files in other folders)
